SSG-2930: ESM server now logs standard out/error to syslog.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@23021 219f1c6e-4a0e-43c8-96f2-6e749be13fd4